트레이딩 제약 조건 및 자유 투자 모드 추가: 집중도 제한 및 거래 간격 조정

--- a/config.json
+++ b/config.json
@@ -102,15 +102,15 @@
   },
   
   "trading_constraints": {
-    "_description": "과매매 방지 제약 조건",
-    "min_interval_minutes": 60,
-    "min_interval_minutes_desc": "최소 거래 간격 (1시간)",
-    "max_trades_per_day": 12,
-    "max_trades_per_day_desc": "일일 최대 거래 횟수",
-    "price_change_threshold": 2.5,
-    "price_change_threshold_desc": "최소 가격 변동 기준 (2.5% 이상 시만 거래)",
-    "ai_confidence_minimum": 0.75,
-    "ai_confidence_minimum_desc": "AI 신뢰도 최소 기준 (75% 이상 시만 실행)",
+    "_description": "과매매 방지 제약 조건 - 빈번한 체크에 대응한 강화된 제약",
+    "min_interval_minutes": 90,
+    "min_interval_minutes_desc": "최소 거래 간격 (1.5시간 - 체크 단축 보상)",
+    "max_trades_per_day": 10,
+    "max_trades_per_day_desc": "일일 최대 거래 횟수 (체크 증가 대응)",
+    "price_change_threshold": 3.0,
+    "price_change_threshold_desc": "최소 가격 변동 기준 (3% 이상 시만 거래 - 노이즈 필터링)",
+    "ai_confidence_minimum": 0.78,
+    "ai_confidence_minimum_desc": "AI 신뢰도 최소 기준 (78% 이상 시만 실행 - 정밀도 향상)",
     "sideways_detection_threshold": 2.0,
     "sideways_detection_threshold_desc": "횡보장 감지 기준 (2% 이하 변동시 거래 제한)",
     "max_single_coin_ratio": 0.35,
@@ -121,21 +121,21 @@
     "_description": "변동성별 체크 주기 설정 (분 단위) - 기회포착과 과매매방지 균형",
     "extreme_volatility_threshold": 8.0,
     "extreme_volatility_threshold_desc": "극고변동성 기준 (8% 이상)",
-    "extreme_volatility_interval": 20,
-    "extreme_volatility_interval_desc": "극고변동성 시 체크 주기 (20분 - 기회 포착)",
+    "extreme_volatility_interval": 15,
+    "extreme_volatility_interval_desc": "극고변동성 시 체크 주기 (15분 - 최대 기회 포착)",
     "high_volatility_threshold": 5.0,
     "high_volatility_threshold_desc": "고변동성 기준 (5% 이상)",
-    "high_volatility_interval": 35,
-    "high_volatility_interval_desc": "고변동성 시 체크 주기 (35분)",
+    "high_volatility_interval": 25,
+    "high_volatility_interval_desc": "고변동성 시 체크 주기 (25분)",
     "medium_volatility_threshold": 3.0,
     "medium_volatility_threshold_desc": "중변동성 기준 (3% 이상)",
-    "medium_volatility_interval": 60,
-    "medium_volatility_interval_desc": "중변동성 시 체크 주기 (1시간)",
-    "low_volatility_interval": 90,
-    "low_volatility_interval_desc": "저변동성 시 체크 주기 (1.5시간)",
-    "default_interval": 75,
-    "default_interval_desc": "기본 체크 주기 (1시간 15분)",
-    "news_emergency_interval": 15,
-    "news_emergency_interval_desc": "긴급 뉴스 시 체크 주기 (15분 - 빠른 대응)"
+    "medium_volatility_interval": 45,
+    "medium_volatility_interval_desc": "중변동성 시 체크 주기 (45분)",
+    "low_volatility_interval": 75,
+    "low_volatility_interval_desc": "저변동성 시 체크 주기 (1시간 15분)",
+    "default_interval": 60,
+    "default_interval_desc": "기본 체크 주기 (1시간 - 균형점)",
+    "news_emergency_interval": 10,
+    "news_emergency_interval_desc": "긴급 뉴스 시 체크 주기 (10분 - 초고속 대응)"
   }
 }
