--- a/config.json
+++ b/config.json
@@ -2,13 +2,13 @@
   "_description": "AI 트레이딩 봇 설정 파일 - GPT-4o-mini 기반 업비트 자동매매",
   
   "trading": {
-    "_description": "거래 관련 기본 설정",
-    "base_trade_ratio": 0.15,
-    "base_trade_ratio_desc": "기본 거래 비율 (15% = 포트폴리오 대비 거래 크기)",
-    "stop_loss_percent": 15,
-    "stop_loss_percent_desc": "손절매 기준 (15% 손실 시 자동 매도)",
-    "min_trade_amount": 5000,
-    "min_trade_amount_desc": "최소 거래 금액 (5000원 미만 거래 방지)",
+    "_description": "거래 관련 기본 설정 (적립식 투자 최적화)",
+    "base_trade_ratio": 0.05,
+    "base_trade_ratio_desc": "기본 거래 비율 (5% = 보수적 포지션, 적립식 투자에 적합)",
+    "stop_loss_percent": 8,
+    "stop_loss_percent_desc": "손절매 기준 (8% 손실 시 자동 매도, 빠른 대응)",
+    "min_trade_amount": 10000,
+    "min_trade_amount_desc": "최소 거래 금액 (10000원 미만 거래 방지, 수수료 효율)",
     "max_position_multiplier": 1.5,
     "max_position_multiplier_desc": "최대 포지션 배수 (고신뢰도 시 1.5배 매수)"
   },
@@ -94,17 +94,19 @@
   },
   
   "safety": {
-    "_description": "안전장치 설정 (자동 리밸런싱)",
-    "min_cash_ratio": 0.15,
-    "min_cash_ratio_desc": "최소 현금 비율 (15% 미만 시 자동 매도)",
-    "max_portfolio_concentration": 0.40,
-    "max_portfolio_concentration_desc": "최대 포트폴리오 집중도 (40% 초과 시 자동 매도)",
+    "_description": "안전장치 설정 (자동 리밸런싱) - 적립식 투자 강화",
+    "min_cash_ratio": 0.30,
+    "min_cash_ratio_desc": "최소 현금 비율 (30% 미만 시 자동 매도, 하락장 대응력 강화)",
+    "max_portfolio_concentration": 0.25,
+    "max_portfolio_concentration_desc": "최대 포트폴리오 집중도 (25% 초과 시 자동 매도, 분산 투자)",
     "rebalancing_deviation_threshold": 0.15,
-    "rebalancing_deviation_threshold_desc": "리밸런싱 편차 기준 (목표 대비 15% 이상 차이 시 리밸런싱)"
+    "rebalancing_deviation_threshold_desc": "리밸런싱 편차 기준 (목표 대비 15% 이상 차이 시 리밸런싱)",
+    "bear_market_cash_ratio": 0.50,
+    "bear_market_cash_ratio_desc": "약세장 시 목표 현금 비율 (50% 방어 모드)"
   },
   
   "trading_constraints": {
-    "_description": "과매매 방지 제약 조건 - 빈번한 체크에 대응한 강화된 제약",
+    "_description": "과매매 방지 제약 조건 - 적립식 투자 최적화",
     "min_interval_minutes": 90,
     "min_interval_minutes_desc": "최소 거래 간격 (1.5시간 - 체크 단축 보상)",
     "max_trades_per_day": 10,
@@ -115,29 +117,29 @@
     "ai_confidence_minimum_desc": "AI 신뢰도 최소 기준 (70% 이상 시만 실행 - 정밀도 향상)",
     "sideways_detection_threshold": 2.0,
     "sideways_detection_threshold_desc": "횡보장 감지 기준 (2% 이하 변동시 거래 제한)",
-    "max_single_coin_ratio": 0.35,
-    "max_single_coin_ratio_desc": "단일 코인 최대 비중 (35% 초과 시 매수 제한)"
+    "max_single_coin_ratio": 0.25,
+    "max_single_coin_ratio_desc": "단일 코인 최대 비중 (25% 초과 시 매수 제한, 분산 강화)"
   },
   
   "check_intervals": {
-    "_description": "변동성별 체크 주기 설정 (분 단위) - 기회포착과 과매매방지 균형",
+    "_description": "변동성별 체크 주기 설정 (분 단위) - 적립식 투자 최적화",
     "extreme_volatility_threshold": 8.0,
     "extreme_volatility_threshold_desc": "극고변동성 기준 (8% 이상)",
-    "extreme_volatility_interval": 15,
-    "extreme_volatility_interval_desc": "극고변동성 시 체크 주기 (15분 - 최대 기회 포착)",
+    "extreme_volatility_interval": 120,
+    "extreme_volatility_interval_desc": "극고변동성 시 체크 주기 (2시간, 과매매 방지)",
     "high_volatility_threshold": 8.0,
     "high_volatility_threshold_desc": "고변동성 기준 (8% 이상)",
-    "high_volatility_interval": 25,
-    "high_volatility_interval_desc": "고변동성 시 체크 주기 (25분)",
+    "high_volatility_interval": 180,
+    "high_volatility_interval_desc": "고변동성 시 체크 주기 (3시간)",
     "medium_volatility_threshold": 3.0,
     "medium_volatility_threshold_desc": "중변동성 기준 (3% 이상)",
-    "medium_volatility_interval": 45,
-    "medium_volatility_interval_desc": "중변동성 시 체크 주기 (45분)",
-    "low_volatility_interval": 75,
-    "low_volatility_interval_desc": "저변동성 시 체크 주기 (1시간 15분)",
-    "default_interval": 60,
-    "default_interval_desc": "기본 체크 주기 (1시간 - 균형점)",
-    "news_emergency_interval": 10,
-    "news_emergency_interval_desc": "긴급 뉴스 시 체크 주기 (10분 - 초고속 대응)"
+    "medium_volatility_interval": 240,
+    "medium_volatility_interval_desc": "중변동성 시 체크 주기 (4시간)",
+    "low_volatility_interval": 360,
+    "low_volatility_interval_desc": "저변동성 시 체크 주기 (6시간, 수수료 절감)",
+    "default_interval": 180,
+    "default_interval_desc": "기본 체크 주기 (3시간, 적립식 최적)",
+    "news_emergency_interval": 30,
+    "news_emergency_interval_desc": "긴급 뉴스 시 체크 주기 (30분, 빠른 대응)"
   }
 }
