feat: 하이브리드 투자 전략 구현 및 신규 코인 거래 스레드 분리
- 뉴스가 있는 코인과 없는 코인 모두 분석하는 하이브리드 전략 추가, AI와 기술적 지표 모두 활용
- 뉴스가 없을 때 기술적 분석을 위한 `analyze_technical_indicators(ticker)` 함수 도입
- 하이브리드 분석 로직을 통합한 `ai_search_coin_news()` 함수 개선
- 기술적 신호가 불충분할 때 거래를 건너뛰도록 `execute_new_coin_trades()` 함수 개선
- 신규 코인 거래를 독립 스레드로 분리하여 더 빈번한 체크(20분마다) 가능, 포트폴리오 분석은 360분마다 유지
- 신규 코인 투자를 독립적으로 처리하는 `trend_coin_trading_loop()` 함수 생성
- 의사결정 프로세스 및 에러 처리를 위한 포괄적인 로깅 추가
- Upbit API 데이터 수집 신뢰성 확보를 위한 테스트 업데이트

--- a/config.json
+++ b/config.json
@@ -60,13 +60,15 @@
       "KRW-XRP"
     ],
     "target_allocation": {
-      "KRW-BTC": 0.25,
-      "KRW-ETH": 0.25,
-      "KRW-SOL": 0.30,
-      "KRW-XRP": 0.20
+      "KRW-BTC": 0.175,
+      "KRW-ETH": 0.175,
+      "KRW-SOL": 0.21,
+      "KRW-XRP": 0.14
     },
-    "target_allocation_desc": "각 코인별 목표 포트폴리오 비중 (리밸런싱 기준)",
-    "allocation_desc": "BTC(25%), ETH(25%), SOL(30%), XRP(20%) 목표 비중"
+    "target_allocation_desc": "각 코인별 목표 포트폴리오 비중 (리밸런싱 기준, 신규코인 15% 반영)",
+    "allocation_desc": "현금(15%), BTC(17.5%), ETH(17.5%), SOL(21%), XRP(14%), 신규코인(15%) 목표 비중",
+    "trend_coin_ratio": 0.15,
+    "trend_coin_ratio_desc": "신규/트렌드 코인 전체 자산 비중 (예: 0.15 = 15%)"
   },
   
   "alerts": {
