--- a/config.json
+++ b/config.json
@@ -2,13 +2,13 @@
   "_description": "AI 트레이딩 봇 설정 파일 - GPT-4o-mini 기반 업비트 자동매매",
   
   "trading": {
-    "_description": "거래 관련 기본 설정 (적립식 투자 최적화)",
-    "base_trade_ratio": 0.05,
-    "base_trade_ratio_desc": "기본 거래 비율 (5% = 보수적 포지션, 적립식 투자에 적합)",
-    "stop_loss_percent": 8,
-    "stop_loss_percent_desc": "손절매 기준 (8% 손실 시 자동 매도, 빠른 대응)",
-    "min_trade_amount": 10000,
-    "min_trade_amount_desc": "최소 거래 금액 (10000원 미만 거래 방지, 수수료 효율)",
+    "_description": "거래 관련 기본 설정 (소액 계좌 최적화)",
+    "base_trade_ratio": 0.10,
+    "base_trade_ratio_desc": "기본 거래 비율 (10% = 소액 계좌용, 적극 투자)",
+    "stop_loss_percent": 12,
+    "stop_loss_percent_desc": "손절매 기준 (12% 손실 시 자동 매도, 변동성 고려)",
+    "min_trade_amount": 5000,
+    "min_trade_amount_desc": "최소 거래 금액 (5000원, 소액 계좌 대응)",
     "max_position_multiplier": 1.5,
     "max_position_multiplier_desc": "최대 포지션 배수 (고신뢰도 시 1.5배 매수)"
   },
@@ -96,15 +96,19 @@
   },
   
   "safety": {
-    "_description": "안전장치 설정 (자동 리밸런싱) - 적립식 투자 강화",
-    "min_cash_ratio": 0.30,
-    "min_cash_ratio_desc": "최소 현금 비율 (30% 미만 시 자동 매도, 하락장 대응력 강화)",
-    "max_portfolio_concentration": 0.25,
-    "max_portfolio_concentration_desc": "최대 포트폴리오 집중도 (25% 초과 시 자동 매도, 분산 투자)",
+    "_description": "안전장치 설정 (자동 리밸런싱) - 악순환 방지",
+    "min_cash_ratio": 0.25,
+    "min_cash_ratio_desc": "최소 현금 비율 (25% 미만 시 자동 매도, 하락장 대응력 강화)",
+    "max_portfolio_concentration": 0.28,
+    "max_portfolio_concentration_desc": "최대 포트폴리오 집중도 (28% 초과 시 자동 매도, 분산 투자)",
     "rebalancing_deviation_threshold": 0.15,
     "rebalancing_deviation_threshold_desc": "리밸런싱 편차 기준 (목표 대비 15% 이상 차이 시 리밸런싱)",
     "bear_market_cash_ratio": 0.50,
-    "bear_market_cash_ratio_desc": "약세장 시 목표 현금 비율 (50% 방어 모드)"
+    "bear_market_cash_ratio_desc": "약세장 시 목표 현금 비율 (50% 방어 모드)",
+    "force_buy_cash_threshold": 0.50,
+    "force_buy_cash_threshold_desc": "강제 매수 현금 임계값 (50% 초과 시 무조건 포트폴리오 리밸런싱)",
+    "rebalancing_cooldown_hours": 6,
+    "rebalancing_cooldown_hours_desc": "리밸런싱 쿨다운 (6시간, 최소 1 체크 사이클 보장, 강제매수-리밸런싱 악순환 완전 차단)"
   },
   
   "trading_constraints": {
@@ -115,12 +119,14 @@
     "max_trades_per_day_desc": "일일 최대 거래 횟수 (체크 증가 대응)",
     "price_change_threshold": 3.0,
     "price_change_threshold_desc": "최소 가격 변동 기준 (3% 이상 시만 거래 - 노이즈 필터링)",
-    "ai_confidence_minimum": 0.70,
-    "ai_confidence_minimum_desc": "AI 신뢰도 최소 기준 (70% 이상 시만 실행 - 정밀도 향상)",
+    "ai_confidence_minimum": 0.65,
+    "ai_confidence_minimum_desc": "AI 신뢰도 최소 기준 (65% 이상 시만 실행 - 거래 기회 증가)",
     "sideways_detection_threshold": 2.0,
     "sideways_detection_threshold_desc": "횡보장 감지 기준 (2% 이하 변동시 거래 제한)",
-    "max_single_coin_ratio": 0.25,
-    "max_single_coin_ratio_desc": "단일 코인 최대 비중 (25% 초과 시 매수 제한, 분산 강화)"
+    "max_single_coin_ratio": 0.28,
+    "max_single_coin_ratio_desc": "단일 코인 최대 비중 (28% 초과 시 매수 제한, 분산 강화)",
+    "consecutive_sell_limit": 5,
+    "consecutive_sell_limit_desc": "연속 매도 제한 (최근 5회 모두 매도 시 제한)"
   },
   
   "check_intervals": {
